New in 2.7.0:

* Bug fix: Checking the existence of a file on S3 handles all AWS errors.
* Bug fix: Clear the fingerprint when removing an attachment.
* Bug fix: Attachment size validation message reads more nicely now.
* Feature: Style names can be either symbols or strings.
* Compatibility: Support for ActiveSupport < 2.3.12.
* Compatibility: Support for Rails 3.2.

New in 2.6.0:

* Bug fix: Files are re-wound after reading.
* Feature: Remove Rails dependency from specs that need Paperclip.
* Feature: Validation matchers support conditionals.

New in 2.5.2:

* Bug fix: Can be installed on Windows.
* Feature: The Fog bucket name, authentication, and host can be determined at runtime via Proc.
* Feature: Special characters are replaced with underscores in #url and #path.

New in 2.5.1:

* Feature: After we've computed the content type, pass it to Fog.
* Feature: S3 encryption with the new :s3_server_side_encryption option.
* Feature: Works without ActiveRecord, allowing for e.g. mongo backends.

New in 2.5.0:

* Performance: Only connect to S3 when absolutely needed.
* Bug fix: STI with cached classes respect new options.
* Bug fix: conditional validations broke, and now work again.
* Feature: URL generation is now parameterized and can be changed with plugins or custom code.
* Feature: :convert_options and :source_file_options to control the ImageMagick processing.
* Performance: String geometry specifications now parse more quickly.
* Bug fix: Handle files with question marks in the filename.
* Bug fix: Don't raise an error when generating an expiring URL on an unassigned attachment.
* Bug fix: The rake task runs over all instances of an ActiveRecord model, ignoring default scopes.
* Feature: DB migration has_attached_file and drop_attached_file methods.
* Bug fix: Switch from AWS::S3 to AWS::SDK for the S3 backend.
* Bug fix: URL generator uses '?' in the URL unless it already appears and there is no prior '='.