@@ -87,12 +87,13 @@ class PaperclipTest < Test::Unit::TestCase
     end
 
     should "generate warning if attachment is redefined with the same url string" do
-      Paperclip.expects(:log).with("Duplicate URL for blah with /system/:attachment/:id/:style/:filename. This will clash with attachment defined in Dummy class")
+      expected_log_msg = "Duplicate URL for blah with /system/:id/:style/:filename. This will clash with attachment defined in Dummy class"
+      Paperclip.expects(:log).with(expected_log_msg)
       Dummy.class_eval do
-        has_attached_file :blah
+        has_attached_file :blah, :url => '/system/:id/:style/:filename'
       end
       Dummy2.class_eval do
-        has_attached_file :blah
+        has_attached_file :blah, :url => '/system/:id/:style/:filename'
       end
     end
 
